Added Login ability.

--- a/Appy/Base.lproj/Main.storyboard
+++ b/Appy/Base.lproj/Main.storyboard
@@ -496,6 +496,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="2eM-Qq-FCR"/>
+        <segue reference="mZo-eE-067"/>
     </inferredMetricsTieBreakers>
 </document>
