--- a/Appy/StoryBoards/Base.lproj/Main.storyboard
+++ b/Appy/StoryBoards/Base.lproj/Main.storyboard
@@ -335,7 +335,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PNC-G3-fUJ">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="102"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ib-pg-YWk">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ib-pg-YWk">
                                                 <rect key="frame" x="76" y="36" width="223" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="9Ib-pg-YWk" secondAttribute="height" multiplier="223:30" id="UPZ-dm-bK2"/>
@@ -524,7 +524,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UPQ-T8-WVq"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Groups" largeTitleDisplayMode="always" id="Wnf-jC-flj">
+                    <navigationItem key="navigationItem" title="Groups" id="Wnf-jC-flj">
                         <barButtonItem key="leftBarButtonItem" title="Log Out" id="QrQ-cV-rKZ">
                             <connections>
                                 <action selector="logoutPressed:" destination="n1W-AZ-6k8" id="gEw-di-H09"/>
@@ -683,10 +683,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X1o-d0-y8W">
-                                <rect key="frame" x="0.0" y="88" width="375" height="724"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X1o-d0-y8W">
+                                <rect key="frame" x="0.0" y="88" width="375" height="656"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="X1o-d0-y8W" secondAttribute="height" multiplier="375:656" id="Xqb-UQ-4q3"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" id="l1h-RS-65j">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -694,21 +696,77 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="l1h-RS-65j" id="U2p-je-K5n">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aNP-g9-Igr">
+                                <rect key="frame" x="0.0" y="744" width="375" height="68"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Message" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ABd-sR-o6F">
+                                        <rect key="frame" x="8" y="19" width="289" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ABd-sR-o6F" secondAttribute="height" multiplier="289:30" id="lP0-ZT-q9T"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qCB-MQ-tmN">
+                                        <rect key="frame" x="297" y="19" width="70" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="qCB-MQ-tmN" secondAttribute="height" multiplier="7:3" id="N5v-Af-gBH"/>
+                                        </constraints>
+                                        <state key="normal" title="Send">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendPressed:" destination="ZxY-cM-Ecw" eventType="touchUpInside" id="hVG-Wa-Uj2"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="qCB-MQ-tmN" firstAttribute="centerY" secondItem="aNP-g9-Igr" secondAttribute="centerY" id="GTl-cD-Ywy"/>
+                                    <constraint firstItem="qCB-MQ-tmN" firstAttribute="leading" secondItem="ABd-sR-o6F" secondAttribute="trailing" id="Pq9-GM-56Z"/>
+                                    <constraint firstItem="qCB-MQ-tmN" firstAttribute="top" secondItem="aNP-g9-Igr" secondAttribute="top" constant="19" id="S1O-4L-lTR"/>
+                                    <constraint firstItem="ABd-sR-o6F" firstAttribute="centerY" secondItem="aNP-g9-Igr" secondAttribute="centerY" id="WQ6-gx-kYg"/>
+                                    <constraint firstAttribute="bottom" secondItem="qCB-MQ-tmN" secondAttribute="bottom" constant="19" id="asY-Pj-NhT"/>
+                                    <constraint firstAttribute="trailing" secondItem="qCB-MQ-tmN" secondAttribute="trailing" constant="8" id="fQe-gn-V2P"/>
+                                    <constraint firstAttribute="width" secondItem="aNP-g9-Igr" secondAttribute="height" multiplier="375:68" id="msU-kC-xS4"/>
+                                    <constraint firstItem="ABd-sR-o6F" firstAttribute="top" secondItem="aNP-g9-Igr" secondAttribute="top" constant="19" id="oyY-pe-2Cy"/>
+                                    <constraint firstAttribute="bottom" secondItem="ABd-sR-o6F" secondAttribute="bottom" constant="19" id="xuL-ZT-iIn"/>
+                                    <constraint firstItem="ABd-sR-o6F" firstAttribute="leading" secondItem="aNP-g9-Igr" secondAttribute="leading" constant="8" id="yeh-GH-WOB"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="X1o-d0-y8W" firstAttribute="trailing" secondItem="at3-vR-hKf" secondAttribute="trailing" id="1Be-h6-qdb"/>
+                            <constraint firstItem="aNP-g9-Igr" firstAttribute="top" secondItem="X1o-d0-y8W" secondAttribute="bottom" id="7WL-bD-hWd"/>
+                            <constraint firstAttribute="bottom" secondItem="aNP-g9-Igr" secondAttribute="bottom" id="Duk-h6-pox"/>
+                            <constraint firstItem="aNP-g9-Igr" firstAttribute="top" secondItem="X1o-d0-y8W" secondAttribute="bottom" id="EFp-V5-F4z"/>
+                            <constraint firstItem="X1o-d0-y8W" firstAttribute="top" secondItem="at3-vR-hKf" secondAttribute="top" id="JJh-pS-jOC"/>
+                            <constraint firstItem="aNP-g9-Igr" firstAttribute="leading" secondItem="at3-vR-hKf" secondAttribute="leading" id="M3N-Kd-2fJ"/>
+                            <constraint firstItem="X1o-d0-y8W" firstAttribute="leading" secondItem="at3-vR-hKf" secondAttribute="leading" id="gME-Ef-Y9W"/>
+                            <constraint firstItem="aNP-g9-Igr" firstAttribute="trailing" secondItem="at3-vR-hKf" secondAttribute="trailing" id="v6G-OA-LKm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="at3-vR-hKf"/>
                     </view>
                     <navigationItem key="navigationItem" title="Chat" id="mvf-Qb-JQe">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="2NV-0S-AO8">
                             <connections>
-                                <action selector="addButtonPressed:" destination="tpg-PK-0e4" id="Oct-Wf-w2Q"/>
+                                <action selector="addButtonPressed:" destination="ZxY-cM-Ecw" id="kar-x0-hZi"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="messageTextField" destination="ABd-sR-o6F" id="CuP-td-s7F"/>
+                        <outlet property="myTableView" destination="X1o-d0-y8W" id="9pf-41-4YB"/>
+                        <outlet property="myView" destination="Fz8-BL-zM9" id="E1L-v6-8Bm"/>
+                        <outlet property="sendButton" destination="qCB-MQ-tmN" id="kW9-uC-Jj5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pGs-hs-vSB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
